FlightPath 6.x Changelog
========================
 
2021-07-08
  Cleaning up code, adding more content to render array system.  Cleaning up malformed HTML.
  
  Continuing work on themeing and rendering system.
   
 
2021-07-07
  Converted advise_display_view to use render array system. 
  
  Changed when drawing course rows, no longer hard-coding widths, styles, align, etc.
  elements.  Instead, we are relying entirely only CSS classes for styling.
 
 
2021-07-06 
  Converted AdvisingScreen::displaySemester to using render array system.

  For markup elements in the form_api, if type is not explicitly set to "markup", and is left blank,
  then the default will be "markup_no_wrappers", which means no wrapping divs will be used. 
  
  Converted AdvisingScreen::draw_course_row to use render array system.
  
  Fixed bug where remainder of course requirement (after partial sub) wasn't sorting correctly when using 
  the "sort by database id" setting.
  
  Fixed bug in Substitution tab, where split sub "pieces" were not showing the correct number of hours.
   


2021-07-02
  Modified Calendar module so that event types can be sheduled for longer durations (up to 2 hrs), have longer buffers (up to 2hrs) and have longer "prevent within" times
  (up to 24 hours).
  
  Added more literal strings to t() so they can be translated.
   

2021-06-28
  Made change in content_content_load(), to make sure that when we load based on cid, we order by vid DESC, to make
  sure we always get the most recent version.
  
  Fixed code in student_search, where the "include inactive students" checkbox was being ignored.  Also changed settings
  for extra conditions to add to query.
  
  Made changes to the way Student Profile hook works, so that other modules can more easily add to the list, and modify existing
  entries if desired.
  
  Fixed bug where recommended and hidden courses were not behaving correctly in groups.  Worked in Blank Degrees but not in What If or 